# CPP_Coursework_2

2FA/: 2FA_users.txt  CMakeLists.txt  lol.cpp  main.cpp
CW2/: Admin.cpp  Admin.h  CMakeLists.txt  DecryptFile.h  EncryptFile.h  File.cpp  File.h  Lecturer.cpp  Lecturer.h  Student.cpp  Student.h  User.cpp  User.h  duplicate_user_check.h  generate_pin.cpp  generate_pin.h  inputvalidation.h  lecturer_announcement.cpp  lecturer_announcement.h  main.cpp  md5hash.h  password_validation.h  system_announcement.cpp  system_announcement.h  template_class.cpp  template_class.h
CW2/SystemAnnouncements/: AnnouncementList.txt  testh1352021.txt
CW2/Users/: lecturer.txt  stud.txt  test.txt  test1.txt
USWCyberApp/: CMakeLists.txt  SideCode.cpp  cutpastearea.cpp  main.cpp
